Bug fixes, adding support for mingyulab

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ArtScanner/artifacts.genshinart.json
+ArtScanner/artifacts.mingyulab.json
 ArtScanner/artifacts.dat
 ArtScanner/artifacts.dat.index
 ArtScanner/artifacts.dat.lock
