--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ ArtScanner/artifacts/**
 
 .vscode/**
 /ArtScanner/artifacts/
+/ArtScanner/.ipynb_checkpoints/
+/ArtScanner/Tools/model_trainer/.ipynb_checkpoints/
+/ArtScanner/Tools/model_trainer/train/
