--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-ArtScanner/artifacts.genshinart.json
+AmenomaDevDocs/examples/artifacts.genshinart.json
 ArtScanner/artifacts.mingyulab.json
 ArtScanner/artifacts.dat
 ArtScanner/artifacts.dat.index
@@ -16,3 +16,6 @@ ArtScanner/artifacts/**
 /ArtScanner/Tools/model_trainer/.ipynb_checkpoints/
 /ArtScanner/Tools/model_trainer/train/
 .idea/**
+/AmenomaDevDocs/examples/artifacts.GOOD.json
+/ArtScanner/Amenoma.log
+/AmenomaDevDocs/examples/materials.GOOD.json
